# QuantTrader

./: CMakeLists.txt  README.md  architecture.md  task.md
backend/: main.cpp  test_csv_loader.cpp  test_data_adapter.cpp  test_event_loop.cpp  test_logger.cpp  test_market_data_feed.cpp  test_message_bus.cpp  test_strategy_base.cpp
backend/common/: market_data.h
backend/core/: event_loop.cpp  event_loop.h  message_bus.cpp  message_bus.h
backend/core/utils/: logger.cpp  logger.h
backend/data/: csv_loader.cpp  csv_loader.h  data_adapter.cpp  data_adapter.h  market_data_feed.cpp  market_data_feed.h  timeframe_manager.cpp  timeframe_manager.h
backend/data/storage/: sample_data.csv
backend/execution/: order_manager.cpp  order_manager.h
backend/risk/: risk_manager.cpp  risk_manager.h
backend/strategy/: dummy_strategy.cpp  dummy_strategy.h  ma_rsi_strategy.cpp  ma_rsi_strategy.h  strategy_base.cpp  strategy_base.h
tests/: test_csv_loader.cpp  test_data_adapter.cpp  test_event_loop.cpp  test_logger.cpp  test_ma_rsi_strategy.cpp  test_market_data_feed.cpp  test_message_bus.cpp  test_multi_period.cpp  test_order_manager.cpp  test_risk_manager.cpp  test_strategy_base.cpp
